# algo2-tp3

./: README.md
Solucion/: CMakeLists.txt  README.md
Solucion/src/: CMakeLists.txt  main.cpp
Solucion/src/gui/: ActorType.h  G_Fire.cpp  G_Fire.h  G_Game.cpp  G_Game.h  G_Map.cpp  G_Map.h  LTexture.cpp  LTexture.h  LTimer.cpp  LTimer.h  SDL_Environment.hpp  ThingsTiles.hpp  setup.cpp  setup.h  utils.cpp  utils.h
Solucion/src/modelo/: Contexto.cpp  Contexto.h  ExtremeExorcism.cpp  ExtremeExorcism.h  Habitacion.cpp  Habitacion.h  TiposJuego.cpp  TiposJuego.h  string_map.h  string_map.hpp
Solucion/src/modelo/localizadores/: localizador.cpp  localizador.h  localizador_aleatorio.cpp  localizador_aleatorio.h  localizador_estatico.cpp  localizador_estatico.h
Solucion/src/modulos_basicos/: linear_map.h  linear_map.hpp  linear_set.h  linear_set.hpp  linear_set_iterators.h
Solucion/tests/: CMakeLists.txt  ee_tests.cpp  hab_tests.cpp
Solucion/tests/estado/: EstadoJuego.cpp  EstadoJuego.h
